Adding isMoreDreams variable

--- a/templates/home.html
+++ b/templates/home.html
@@ -65,6 +65,7 @@
                 <a class="btn-support" ui-sref="dream({ slug: dream.slug })">Підтримати</a>
             </li>
         </ul>
+        <span class="ico-spin5 animate-spin" ng-show="isMore()"></span>
     </section>
 
     <div class="popup popup-login" id="popup-login">
