Adding carousel.css to less-file

--- a/styles/style.less
+++ b/styles/style.less
@@ -7,6 +7,17 @@
 @import (inline) "user-profile-edit.css";
 @import (inline) "user-profile.css";
 @import (inline) "../bower_components/angular-loading/angular-loading.css";
+@import (inline) "../bower_components/angular-carousel/dist/angular-carousel.css";
 .dw-loading.dw-loading-overlay {
   background-color: rgba(0, 0, 0, .5);
+}
+.carosel-wrapper {
+  overflow: visible !important;
+}
+.carosel-wrapper > li {
+  height: auto !important;
+  cursor: pointer;
+}
+.carosel-nav li:hover a {
+  color: #17d9a5;
 }
