moving function for formating dream in global scope

--- a/js/home/view/home.html
+++ b/js/home/view/home.html
@@ -34,7 +34,8 @@
                          data-pct="{{dream.financialPercent}}"
                          ng-show="dream.dream_financial_resources.length > 0">
                         <svg class="svg" width="60" height="60" version="1.1" xmlns="http://www.w3.org/2000/svg">
-                            <circle r="25" cx="30" cy="30" fill="transparent" stroke-dasharray="157.079633"
+                            <circle r="25" cx="30" cy="30" fill="transparent"
+                                    stroke-dasharray="157.079633"
                                     stroke-dashoffset="0"></circle>
                             <circle class="bar" r="25" cx="30" cy="30" fill="transparent"
                                     stroke-dasharray="20"
